# snip

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src/: App.tsx  data.tsx  index.css  rust-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  common.rs  lib.rs  local_bin_store.rs  main.rs  window.rs
src/components/: CategoryProvider.tsx  CategorySidebar.tsx  DynamicFeatureTable.tsx  ImageTable.tsx  InnerComp.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/components/ui/: scroll-area.tsx
src/services/: fs.service.ts  groq.service.ts
