[package]
name = "htn-2024"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "htn_2024_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.2"
webp = "0.3.0"
color-eyre = "0.6.3"
clipboard-rs = "0.1.11"
tokio = { version = "1.0", features = ["full"] }
home = "0.5.9"
tauri-plugin-fs = "2.0.0-rc"
window-vibrancy = "0.5.2"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-theme = "2"
